UHI-1868 Updated HSPA Code.